<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">WhenToLeave</string>
	<string name="version">1.0</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_transport_mode_car">By Car</string>
	<string name="menu_transport_mode_bicycle">By Bicycle</string>
	<string name="menu_transport_mode_walking">By Walking</string>
	<string name="menu_view_calendars">View Calendars</string>
	<string name="menu_preferences">Preferences</string>
	<string name="menu_logout">Logout</string>
	<string name="title_home">Home</string>
	<string name="title_agenda">Agenda</string>
	<string name="title_map">Map</string>
	<string name="calendarsTitle">Calendars</string>
	<string name="eventDetailsTitle">Event Details</string>
	<string name="preferencesTitle">Preferences</string>
	<string name="refresh">Refresh</string>
	<string name="loginCanceled">Login Canceled</string>
	<string name="whileRefreshing">Refreshing Data...</string>
	<string name="lastRefreshedBase">Last Refreshed:</string>
	<string name="lastRefreshedDefault">Last Refreshed: Never</string>
	<string name="eventLocation">35+Corporate+Dr+Burlington+MA</string>
	<string name="refresh_time">Refresh Time</string>
	<string name="notify_time">Notify Me to Leave</string>
</resources>