<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item
		android:id="@+id/menu_transport_mode"
		android:icon="@drawable/car_white55"
		android:showAsAction="ifRoom|withText"
		android:title="@string/menu_transport_mode_car">
		<menu >
			<item
				android:id="@+id/menu_transport_mode_car"
				android:icon="@drawable/car_white55"
				android:onClick="onSelectTransportMode"
				android:title="@string/menu_transport_mode_car"/>
			<item
				android:id="@+id/menu_transport_mode_bicycle"
				android:icon="@drawable/bicycle_white55"
				android:onClick="onSelectTransportMode"
				android:title="@string/menu_transport_mode_bicycle"/>
			<item
				android:id="@+id/menu_transport_mode_walking"
				android:icon="@drawable/person_white55"
				android:onClick="onSelectTransportMode"
				android:title="@string/menu_transport_mode_walking"/>
		</menu>
	</item>
	<item
		android:id="@+id/menu_view_calendars"
		android:icon="@android:drawable/ic_menu_agenda"
		android:title="@string/menu_view_calendars"/>
	<item
		android:id="@+id/menu_preferences"
		android:icon="@android:drawable/ic_menu_preferences"
		android:title="@string/menu_preferences"/>
</menu>